welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {

var T = new Array[Color](getMondeHauteur())  
  
for(i<-0 to getMondeHauteur()-1){
    T(i)=getCouleurSol()
    avance()
}
  
  for (j<- 0 to getMondeHauteur()-1){
  	recule(getMondeHauteur()-1)
    gauche()
  	for( i <- 0 to getMondeHauteur()-1){
    	setCouleurBrosse(T(i))
    	baisseBrosse()
    	leveBrosse()
    	avance()
      
  }
  }
  recule()
  droite()
  avance()
  gauche()
}}